--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
       nose pylint
   - source activate test-environment
   - pip install pypandoc
+  - pip install -r requirements.txt
   - pip install .
   - pip install coveralls
 script:
