--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,8 @@ before_install:
 install:
   - >
       conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-      nose pylint pandoc
+      nose pylint
   - source activate test-environment
-  - pip install pypandoc
   - pip install -r requirements.txt
   - pip install .
   - pip install coveralls
